dnl Process this file with autoconf to produce a configure script.
AC_INIT(bcdflt.c)

dnl Checks for programs.

dnl AC_CANONICAL_SYSTEM
AC_CANONICAL_HOST


AC_LANG_C


AC_PROG_CC
AC_PROG_CPP
dnl ??? AC_REQUIRE_CPP
AC_PROG_F77
AC_PROG_MAKE_SET

dnl Check for fortran compiler
AC_MSG_CHECKING(whether we have a FORTRAN 77 compiler)
AC_CHECK_PROGS(F77, f77 g77 xlf xlf77 fl32 fort77 fc cf77 frt f90 xlf90)
AC_PROG_F77
if test -n "$F77"; then
  if test -n "$GCC"; then
    AC_F77_LIBRARY_LDFLAGS
    ACX_F77_FUNC_MANGLE
    case $host_os in
      ultrix*)
        CC="$CC -Dmain=MAIN_"
        ;;
      osf*)
        CC="$CC -Dmain=MAIN__"
        ;;
      sunos*)
        CC="$CC -Dmain=MAIN_"
        ;;
    esac
  fi
else
  F77="$CC"
  fortran=no
  AC_MSG_WARN(no FORTRAN compiler)
fi

dnl fix up CPP when GCC is the compiler
dnl should also use gcc if e.g. intel of pgi compiler is used ???
if test -n "$GCC"; then
  CPP="$CPP -traditional"
fi

dnl Check for system name
dnl bug: on solaris with gcc compiler, -DSUN will cause the cvgmt() procedure to fail

case $host_os in
      solaris*)
        SYSTEM="SUN"
	CMFLAGS="$CMFLAGS -DSUN"
        ;;
      linux*)
        SYSTEM="LINUX"
	CMFLAGS="$CMFLAGS -DLINUX"
        ;;
      unicos*)
        SYSTEM="UNICOS"
	CMFLAGS="$CMFLAGS -DUNICOS"
        ;;

esac
if test -n "$GCC"; then
  SYSTEM="LINUX"
fi
AC_SUBST(SYSTEM)
AC_SUBST(CMFLAGS)

dnl Checks for libraries.

AC_ARG_ENABLE(cfitsio, [  --enable-cfitsio        do not use CFITSIO], ok=$enableval, ok=no)
if test "$ok" = "yes"; then
  AC_MSG_CHECKING(whether we have CFITSIO)

  AC_ARG_WITH(cfitsio-prefix, 
        [  --with-cfitsio-prefix=PFX     Prefix where CFITSIO was installed], 
        cfitsio_config_prefix="$withval", 
        cfitsio_config_prefix="/usr/local")

  if test x$cfitsio_config_prefix != x; then
    cdir="$cfitsio_config_prefix"
    found="no"
    for dir in $cdir/include $cdir
      do
        if test -f ${dir}/fitsio.h ; then
                CFITSIO_INC="-I${dir}"
    		CFITSIO_LIB="-L$cdir/lib"
    		CFITSIO_LIB="$CFITSIO_LIB -lcfitsio"
                AC_DEFINE(HAVE_LIBCFITSIO)
                AC_MSG_RESULT([yes: $CFITSIO_INC])
                found="yes"
                break;
	elif test -f ${dir}/cfitsio/fitsio.h ; then
                CFITSIO_INC="-I${dir}/cfitsio"
    		CFITSIO_LIB="-L$cdir/lib"
    		CFITSIO_LIB="$CFITSIO_LIB -lcfitsio"
                AC_DEFINE(HAVE_LIBCFITSIO) 
                AC_MSG_RESULT([yes: $CFITSIO_INC])
                found="yes"
                break;
	elif test -f ${dir}/fitsio/fitsio.h ; then
                CFITSIO_INC="-I${dir}/fitsio"
		CFITSIO_LIB="-L$cdir/lib"
    		CFITSIO_LIB="$CFITSIO_LIB -lcfitsio"
                AC_DEFINE(HAVE_LIBCFITSIO) 
                AC_MSG_RESULT([yes: $CFITSIO_INC])
                found="yes"
                break;
        fi
      done
    if test "$found" = "no"; then
      AC_MSG_RESULT(no)
      AC_MSG_WARN(could not find CFITSIO library...)
      FITSIO=NO_FITSIO
    else
      FITSIO=FITSIO
    fi
  fi
else
  CFITSIO_INC=""
  CFITSIO_LIB=""
  FITSIO=NO_FITSIO
  AC_MSG_WARN([CFITSIO disabled])
fi
AC_SUBST(FITSIO)
AC_SUBST(CFITSIO_LIB)



dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h sys/time.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_INLINE
AC_HEADER_TIME

dnl Checks for library functions.
AC_CHECK_FUNCS(mkdir select)

AC_OUTPUT(Makefile cmhog.def)
